2010-07-29  Jon VanAlten  <jon.vanalten@redhat.com>

	* patches/openjdk/6967533-pre_epoch.patch: New file.  Backpatched from
	jdk7 for upstream bug#6967533.  Fixes IcedTea Bug#394:
	java.lang.ExceptionInInitializerError on systems with
	time set before January 1, 1970
	* Makefile.am: include above patch.
	* NEWS: Add 6967533 backport.

2010-07-29  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Add 6961732 backport.

2010-07-29  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Update with contents of b19 & b20,
	and fixes to NetX, Zero and Shark not on
	the 1.8 branch.

2010-07-29  Mark Wielaard  <mjw@redhat.com>

	* patches/systemtap-alloc-size-workaround.patch: New patch.
	* Makefile.am (ICEDTEA_PATCHES): Add new patch for ENABLE_SYSTEMTAP.
	* tapset/hotspot.stp.in (object_alloc): Calculate size from
	$arg4 and $HeapWordSize.

2010-07-29  Gary Benson  <gbenson@redhat.com>

	PR icedtea/525:
	* NEWS: Updated.
	* ports/hotspot/src/share/vm/shark/sharkCacheDecache.cpp
	(SharkDecacher::end_frame): Add missing fields.

2010-07-28  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Add 1.7.2, 1.7.3, 1.7.4 and 1.6.3
	releases.

2010-07-28  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/security/NotAllSignedWarningPane.java
	(addComponents): Fix erroneous line that got added when backporting.

2010-07-28  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Added a new
	HashMap to map source locations to security descriptors for that
	location.
	(getInstance): Use the new merge() method to merge loader data.
	(initializeResources): Add map entries to the new
	jarLocationSecurityMap.
	(getPermissions): Decide permissions based on security descriptor
	associated with the calling code, rather than with the jnlp file.
	(getCodeSourceSecurity): New method. Returns the security descriptor
	associated with the given code source URL.
	(merge): New method. Merges loader classpaths, native dir paths, and