@@ -700,6 +700,7 @@ New in release 1.9 (2010-XX-XX):
   - PR525: Shark made not entrant deopt sigsegv regression after bump to b20 and hs17.
 * NetX
   - Do not use Look and Feel related methods for setting up security dialogs
+  - Minor fixes to JNLPRandomAccessFile
 
 New in release 1.8.1 (2010-07-28):
 
