@@ -1,3 +1,11 @@
+2010-07-29  Omair Majid  <omajid@redhat.com>
+
+	* NEWS: Add this fix.
+	* netx/javax/jnlp/JNLPRandomAccessFile.java: Extend java.io.DataInput and
+	java.io.DataOutput.
+	* netx/net/sourceforge/jnlp/services/XJNLPRandomAccessFile.java
+	(XJNLPRandomAccessFile): Throw IOException on failure.
+
 2010-07-29  Jon VanAlten  <jon.vanalten@redhat.com>
 
 	* patches/openjdk/6967533-pre_epoch.patch: New file.  Backpatched from
